kubernetes/deploy/jellystat/deployment_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat-db
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: jellystat-db
      release: jellystat-db
  template:
    metadata:
      labels:
        app: jellystat-db
        release: jellystat-db
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
      - image: postgres:15.2
        imagePullPolicy: Always
        name: jellystat-db
        # ---------------
      
        # --- Environment ---
        ports:
        - containerPort: 5432
          name: pg
          protocol: TCP
        # ---------------

        # --- Mounts ---
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: jellystat-data
        # ---------------
      volumes:
      - name: jellystat-data
        persistentVolumeClaim:
          claimName: jellystat-data
