kubernetes/deploy/jellystat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: jellystat
spec:
  rules:
  - host: jellystat.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: jellystat
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
